--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
 # Secret key for JWT
-SECRET_KEY=your_secret_key_here
+SECRET_KEY="your_secret_key"
 
 # Algorithm for JWT
-ALGORITHM=your_algorithm_here
+ALGORITHM="your_algorithm"
+
+# Service names
+AUTH_SERVICE_NAME="your_auth_service_name"
+USER_SERVICE_NAME="your_user_service_name"
+FILE_SERVICE_NAME="your_file_service_name"
+DATA_SERVICE_NAME="your_data_service_name"
+
+# Domain for the services
+SERVICE_DOMAIN="your_service_domain"
