--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,12 @@
 sonar.projectKey=EPS-DataMed_gateway
 sonar.organization=eps-datamed
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=gateway
-#sonar.projectVersion=1.0
+sonar.projectName=gateway
+sonar.projectVersion=1.0
 
+sonar.sources=main.py
+sonar.tests=test_main.py
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.python.coverage.reportPaths=coverage.xml
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
