refac: final adjustments

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ AUTH_SERVICE_NAME="your_auth_service_name"
 USER_SERVICE_NAME="your_user_service_name"
 FILE_SERVICE_NAME="your_file_service_name"
 DATA_SERVICE_NAME="your_data_service_name"
+TERM_SERVICE_NAME="your_term_service_name"
 
 # Domain for the services
 SERVICE_DOMAIN="your_service_domain"
