--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi==0.88.0
-httpx==0.24.1
+fastapi==0.111.0
+httpx==0.27.0
 python-jose==3.3.0
-pyjwt==2.4.0
-uvicorn==0.29.0
+pyjwt==2.8.0
+uvicorn==0.30.1
 python-dotenv==1.0.1
-python-multipart==0.0.5
-pytest
-pytest-asyncio
-pytest-cov
+python-multipart==0.0.9
+pytest==8.2.2
+pytest-asyncio==0.23.7
+pytest-cov==5.0.0
