--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,15 @@
 sonar.projectKey=EPS-DataMed_gateway
 sonar.organization=eps-datamed
 
-sonar.projectName=gateway
-sonar.projectVersion=1.0
-
-sonar.sources=main.py
-sonar.tests=test_main.py
-
 sonar.python.coverage.reportPaths=coverage.xml
 
-sonar.sourceEncoding=UTF-8
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=gateway
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+sonar.sources=app/
+sonar.tests=tests/
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
